--- a/BOOTSTRAP/Task6/b6.html
+++ b/BOOTSTRAP/Task6/b6.html
@@ -18,7 +18,7 @@
   <header class="">
       <div class="row fixed-top  p-2 my-auto" style="background-color: lightgrey">
           <div class="col-md-6 col-9 ">
-              <img height="60" src="https://lh5.googleusercontent.com/mZWsfaeKGI7-u9R4i_rz5IrHqIK6hXq7wbm9hovavX9QG6IIf0ZzHM6Q01A9plR8VNRYxdWw36Q1egw=w1897-h930" alt="">
+              <img height="60" src="Build.MyWeb.png" alt="">
           </div>
           <div class="col-md-6 col-3">
               <nav class="navbar navbar-expand-lg navbar-light">
@@ -51,10 +51,10 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 img-fluid" style="height: auto;" src="https://lh3.googleusercontent.com/myCJxeX9eCGaCReAFrxAJKlSSdBiEGctDhcqSEl69z-l4eL3sMqN9gl6-Dub05OjFxQxAGqm7IT8s1I=w1897-h930" alt="First slide">
+          <img class="d-block w-100 img-fluid" style="height: auto;" src="carousel1.png" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-fluid" style="height: auto;" src="https://lh6.googleusercontent.com/arG0GF7b_t3dd5R0aPIoiWwXXkZxjY9ip3bFeQuGM7yqbh76paQu59p_W5WPvl_ItTQ8z5UtNj1aTCU=w1897-h930" alt="Second slide">
+          <img class="d-block w-100 img-fluid" style="height: auto;" src="carousel2.png" alt="Second slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
