--- a/BOOTSTRAP/Task6/b6.html
+++ b/BOOTSTRAP/Task6/b6.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Build.myweb</title>
-    <link rel="icon" href="https://lh5.googleusercontent.com/Ej2BTQu6k1oUNWoKDfG6H6Yl5O6DDrMloJw3FdAvGarhf3ua-JlH-E_5wO0Gh5MnsdHXW6b9PHY9K-E=w937-h886">
+    <link rel="icon" href="Build.MyWeb.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
